--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Portfolio website of Ramnath Shenoy B. Contains Experience, Skills, Projects, Education and other details. This website can be used to contact Ramnath Shenoy B."
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Ramnath Shenoy B</title>
   </head>
   <body>
     <noscript>
