--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,10 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
+      AOS.init();
       WebFont.load({
         google: {
           families: ["Poppins:500", "Montserrat:600"],
